--- a/views/pages/admin_login.ejs
+++ b/views/pages/admin_login.ejs
@@ -5,7 +5,7 @@
       <h1 class="logo-name">C+</h1>
     </div>
     <h4>Trang cấu hình</h4>
-    <p>Cấu hình toàn bộ App của Shopeelike</p>
+    <p>Cấu hình toàn bộ App</p>
     <p>Đăng nhập để thực hiện</p>
     <form role="form" action="/admin/login/local" method="POST">
       <div class="form-group">
