--- a/views/layouts/layout.ejs
+++ b/views/layouts/layout.ejs
@@ -1,12 +1,11 @@
 <!DOCTYPE html>
 <html>
   <head>
-    <title>New Sails App</title>
+    <title>Cấu hình</title>
 
     <!-- Viewport mobile tag for sensible mobile support -->
     <meta name="viewport" content="width=device-width, initial-scale=1, maximum-scale=1">
-
-
+    <link rel="icon" type="image/png" href="/images/icon.png">
     <!--
         Stylesheets and Preprocessors
         ==============================
@@ -106,7 +105,7 @@
     -->
 
     <!--SCRIPTS-->
-    <script src="/dependencies/sails.io.js"></script>
+    
     <!--SCRIPTS END-->
   </body>
 </html>
