new-feature: upload-image

--- a/views/pages/homepage.ejs
+++ b/views/pages/homepage.ejs
@@ -8,6 +8,9 @@
     <div class="card-body">
       <a class="btn btn-primary dim" href="/ty-gia">Tỷ giá</a>
     </div>
+    <div class="card-body">
+      <a class="btn btn-primary dim" href="/upload-image">Upload hình ảnh</a>
+    </div>
   </div>
 </div>
 
