--- a/views/pages/upload-image.ejs
+++ b/views/pages/upload-image.ejs
@@ -8,7 +8,7 @@
   <div class="mt-4">
     <div class="d-flex justify-content-center">
       <div class="img-wrapper" v-for="img in list">
-        <img :src="'/upload-image/' + img.filename">
+        <img :src="'https://config.shopeelike.cf/upload-image/' + img.filename">
         <small class="d-block text-center">/upload-image/{{img.filename}}</small>
         <div class="text-center">
           <button class="btn btn-danger btn-sm" @click="deleteFile(img.filename)">Xoá</button>
