--- a/views/pages/upload-image.ejs
+++ b/views/pages/upload-image.ejs
@@ -6,7 +6,7 @@
     <button v-if="file && filename" class="btn btn-primary" @click="upload()">Upload</button>
   </div>
   <div class="mt-4">
-    <div class="d-flex justify-content-center">
+    <div class="d-flex justify-content-center flex-wrap">
       <div class="img-wrapper" v-for="img in list">
         <img :src="'/upload-image/' + img.filename">
         <small class="d-block text-center">https://config.shopeelike.cf/upload-image/{{img.filename}}</small>
